--- a/02_Day_Introduction_to_React/index.html
+++ b/02_Day_Introduction_to_React/index.html
@@ -16,11 +16,10 @@
 
     <script type="text/babel">
 
-        const rootEl = document.getElementById("root");
+        const rootEl = document.querySelector(".root");
 
-        const element = <p> I am a JSX element </p>
-
-        ReactDOM.render(element, rootEl)
+        const element = <h1> I am a JSX element </h1>
+        ReactDOM.render(element, rootEl);
     </script>
 </body>
 </html>
